# briscola_challenge

./: .gitignore  main.py  pyproject.toml  simulator.py
briscola/: example_ai.py  main.py  simulator.py
