[tool.poetry]
name = "briscola"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pyinstrument = "^4.4.0"

[tool.poetry.scripts]
run_main = 'briscola.main:run_main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
